	src/gui/char_select.cpp, src/gui/chat.cpp, src/gui/buy.cpp,
	src/engine.cpp, src/beingmanager.cpp, src/npc.cpp,
	src/net/messageout.cpp, src/net/messageout.h: Got rid of the default
	MessageOut constructor, since all messages should have an ID.
	* src/net/protocol.cpp, src/net/protocol.h, src/net/messagein.cpp,
	src/net/playerhandler.cpp, src/Makefile.am: Got rid of no longer used
	protocol.cpp.

2006-08-27  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/localplayer.cpp, src/net/protocol.h: Send move message
	whenever a destination is selected.
	* src/beinghandler.cpp: Smoothed being trajectories.
	* src/localplayer.cpp, src/game.cpp, src/map.cpp, src/gui/gui.cpp,
	src/engine.cpp, src/beingmanager.cpp, src/being.cpp, src/being.h,
	src/net/beinghandler.cpp, src/net/playerhandler.cpp: Changed beings
	tile-based coordinates to pixel-based coordinates (almost, they point
	to tile centers for now).
	* src/net/beinghandler.cpp, src/net/beinghandler.h: Added support for
	leaving beings.

2006-08-26  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/char_select.cpp, src/gui/playerbox.cpp, src/player.cpp,
	src/main.cpp, src/being.cpp, src/net/beinghandler.cpp, src/being.h,
	data/graphics/sprites/hairstyle0.xml,
	data/graphics/sprites/Makefile.am: Got rid of numerous additions and
	substractions to the hair style and color. Hair style 0 was added and
	defined as being bald (so bald is no longer a hardcoded style).
	* src/player.cpp, src/being.cpp, src/net/charserverhandler.cpp,
	src/being.h: Fixed player sprite not showing up.

2006-08-26  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/net/chathandler.cpp, src/gui/chat.cpp, src/net/protocol.h: Added
	support for "say around" messages.
	* src/net/beinghandler.cpp: Partly implemented being creation, so that
	chat works.
	* src/game.cpp, src/engine.h, src/beingmanager.h, src/gui/trade.cpp,
	src/gui/sell.cpp, src/gui/char_select.cpp, src/gui/chat.h,